[package]
name = "tellme"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
home = "0.5.4"
lazy_static = "1.4.0"
reqwest = "0.11.14"
rustyline = "11.0.0"
serde = { version = "1.0.155", features = ["derive"] }
serde_json = "1.0.94"
termimad = "0.23.0"
tokio = { version = "1.26.0", features = ["full"] }

[profile.release]
lto = true
strip = true
